selfhost/test/typechecker/funcdecl/error_generics_param_type_mismatch.out
Error at %FILE_NAME%:3:17
Type mismatch for parameter 't'
  |  foo((1, "two"), "one", 2)
                     ^
Expected: Int
but instead found: String
