selfhost/test/typechecker/funcdecl/error_generics_param_type_mismatch.abra
// Test to ensure the generics are realized using the tuple
func foo<T, U>(pair: (T, U), t: T, u: U) {}
foo((1, "two"), "one", 2)